--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,14 @@
 /* purgecss start ignore */
+
 @tailwind base;
-@tailwind components;
+
+/* @tailwind components;
 article a {
     color: rgb(49, 49, 182);
     text-decoration: underline;
-}
-/* purgecss end ignore */
-@tailwind utilities;
+} */
 
+
+/* purgecss end ignore */
+
+@tailwind utilities;
