--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,13 @@
 /* purgecss start ignore */
 
 @tailwind base;
-@tailwind components;
+
+/* @tailwind components;
 article a {
     color: rgb(49, 49, 182);
     text-decoration: underline;
-}
+} */
 
-;
 
 /* purgecss end ignore */
 
