--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,5 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500;600;700&family=Proza+Libre&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lato&display=swap');
 .cursive {
     font-family: 'Dancing Script', cursive;
-    font-size: x-large;
+}
+
+.cormorant-title {
+    font-family: 'Cormorant', serif;
+    font-weight: 700;
+    font-size: 62px;
+}
+
+.cormorant-sub {
+    font-family: 'Cormorant', serif;
+    font-weight: 700;
+    font-size: 50px;
+}
+
+.proza {
+    font-family: 'Proza Libre', sans-serif;
+}
+
+.sans {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.poiret {
+    font-family: 'Poiret One', cursive;
 }
