--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,6 @@
 
 @tailwind utilities;
 body {
-    background-color: #F9F1F0;
     font-family: 'Open Sans', sans-serif;
+    background-color: #FFFFFF;
 }
