change navbar to absolute at top, remove banner, change style of hero, add wave svg

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: #FFFFFF;
 }
+
+#contact-button {
+    min-width: 256px;
+    justify-content: end;
+}
