--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,6 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@100;200;300;400;500;700&display=swap');
 .title {
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 400;
+    font-family: 'Noto Serif Display', serif;
+    font-weight: 500;
+    font-size: 2em;
+    line-height: 1;
+}
+
+.title--secondary {
+    font-family: 'Noto Serif Display', serif;
+    font-weight: 700;
+    font-size: 1.75em;
+    line-height: 1;
+    letter-spacing: .125em;
+    text-transform: uppercase;
+}
+
+@media screen and (max-width: 767px) {
+    .title {
+        font-size: 1.1em;
+    }
 }
